fix: Use absolute paths for scripts and assets (i18n /en/ support)

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,16 +6,16 @@
     <title>Gast auf Erden | Spiritueller Rückzugsort am Waldrand</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
     <!-- Mobile Web App -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -1565,7 +1565,7 @@
             </button>
         </div>
         <div class="header-content">
-            <img src="logo-neu.png" alt="Logo" class="header-logo">
+            <img src="/logo-neu.png" alt="Logo" class="header-logo">
             <h1 id="mainTitle" data-i18n="header.title">gastauferden.at</h1>
             <p class="subtitle" data-i18n="header.subtitle">Ein magischer Ort zum Sein • Hollenthon</p>
         </div>
@@ -2047,13 +2047,13 @@
 
         <div style="margin-top: 24px; padding-top: 20px; border-top: 1px solid rgba(0,0,0,0.1); text-align: center;">
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 16px; margin-bottom: 16px; font-size: 0.85rem;">
-                <a href="impressum.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.imprint">Impressum</a>
+                <a href="/impressum.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.imprint">Impressum</a>
                 <span style="color: var(--text-muted);">•</span>
-                <a href="datenschutz.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.privacy">Datenschutz</a>
+                <a href="/datenschutz.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.privacy">Datenschutz</a>
                 <span style="color: var(--text-muted);">•</span>
-                <a href="kontakt.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.contact">Kontakt</a>
+                <a href="/kontakt.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--text-muted)'" data-i18n="footer.contact">Kontakt</a>
                 <span style="color: var(--text-muted);">•</span>
-                <a href="admin.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s; opacity: 0.5;" onmouseover="this.style.color='var(--forest)'; this.style.opacity='1'" onmouseout="this.style.color='var(--text-muted)'; this.style.opacity='0.5'" title="Admin">Admin</a>
+                <a href="/admin.html" style="color: var(--text-muted); text-decoration: none; transition: color 0.2s; opacity: 0.5;" onmouseover="this.style.color='var(--forest)'; this.style.opacity='1'" onmouseout="this.style.color='var(--text-muted)'; this.style.opacity='0.5'" title="Admin">Admin</a>
             </div>
             <div style="font-size: 0.8rem; color: var(--text-muted);">
                 Powered by <a href="https://ssi.at" target="_blank" style="color: var(--sage-dark); text-decoration: none; font-weight: 500;" onmouseover="this.style.color='var(--forest)'" onmouseout="this.style.color='var(--sage-dark)'">SSI</a>
@@ -2113,10 +2113,10 @@
         <span id="feedIndicator"></span>
     </div>
 
-    <script src="i18n.js"></script>
-    <script src="config.js"></script>
-    <script src="app.js"></script>
-    <script src="inline-editor.js"></script>
+    <script src="/i18n.js"></script>
+    <script src="/config.js"></script>
+    <script src="/app.js"></script>
+    <script src="/inline-editor.js"></script>
     <script>
         // Display version from config
         if (CONFIG.VERSION) {
