fix: Complete i18n implementation - greetings, subtitles, contact labels
- Add i18n support for time-based greetings in app.js
- Fix updateFormalAddressTexts to use i18n when available
- Add data-i18n attributes to About, Contact sections
- Simplify English translations (no du/sie variants needed)
- Add ?lang=en query parameter support for local development
- Use absolute paths for i18n JSON files

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1614,8 +1614,8 @@
                 <div class="card-header">
                     <div class="card-icon" style="background: linear-gradient(135deg, var(--forest) 0%, var(--sage) 100%);"><i data-lucide="trees"></i></div>
                     <div>
-                        <h3 class="card-title">Über diesen Ort</h3>
-                        <p class="card-subtitle">Wo Magie und Natur sich vereinen</p>
+                        <h3 class="card-title" data-i18n="about.title">Über diesen Ort</h3>
+                        <p class="card-subtitle" data-i18n="about.subtitle">Wo Magie und Natur sich vereinen</p>
                     </div>
                 </div>
                 <div style="color: var(--text-light); font-size: 1rem; line-height: 1.8; margin-top: 16px;">
@@ -1941,43 +1941,43 @@
                 <div class="card-header">
                     <div class="card-icon"><i data-lucide="message-circle"></i></div>
                     <div>
-                        <h3 class="card-title">Kontakt & Hilfe</h3>
-                        <p id="contactSubtitle" class="card-subtitle" style="color: rgba(255,255,255,0.7);">Wir sind für Sie da</p>
+                        <h3 class="card-title" data-i18n="contact.title">Kontakt & Hilfe</h3>
+                        <p id="contactSubtitle" class="card-subtitle" style="color: rgba(255,255,255,0.7);" data-i18n="contact.subtitle">Wir sind für Sie da</p>
                     </div>
                 </div>
                 <div class="contact-grid">
                     <div class="contact-item">
                         <div class="contact-icon"><i data-lucide="user"></i></div>
                         <div>
-                            <div class="contact-label">Gastgeber</div>
+                            <div class="contact-label" data-i18n="contact.host">Gastgeber</div>
                             <div class="contact-value" id="hostelHost">Martin Mollay</div>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i data-lucide="phone"></i></div>
                         <div>
-                            <div class="contact-label">Telefon</div>
+                            <div class="contact-label" data-i18n="contact.phone">Telefon</div>
                             <div class="contact-value" id="hostelPhoneDisplay">+43 650 25 26 26 26</div>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i data-lucide="mail"></i></div>
                         <div>
-                            <div class="contact-label">E-Mail</div>
+                            <div class="contact-label" data-i18n="contact.email">E-Mail</div>
                             <div class="contact-value" id="hostelEmailDisplay">martin@ssi.at</div>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i data-lucide="map-pin"></i></div>
                         <div>
-                            <div class="contact-label">Adresse</div>
+                            <div class="contact-label" data-i18n="contact.address">Adresse</div>
                             <div class="contact-value" id="hostelAddressDisplay">Ausstraße 33, 2812 Hollenthon</div>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i data-lucide="siren"></i></div>
                         <div>
-                            <div class="contact-label">Notfall</div>
+                            <div class="contact-label" data-i18n="contact.emergency">Notfall</div>
                             <div class="contact-value">112</div>
                         </div>
                     </div>
