feat: Complete i18n - welcome message and About section translated
- Add welcome.message i18n support in updateGreeting()
- Translate About This Place content (intro, fireplace, forest, outro)
- Add data-i18n attributes to About section HTML
- Full English translation now complete

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1619,22 +1619,22 @@
                     </div>
                 </div>
                 <div style="color: var(--text-light); font-size: 1rem; line-height: 1.8; margin-top: 16px;">
-                    <p style="margin-bottom: 16px;">
+                    <p style="margin-bottom: 16px;" data-i18n="about.intro">
                         Hier, am Rand des Waldes, hat sich ein besonderer Platz entfaltet – ein Ort zum Innehalten,
                         zum Auftanken und zum Wiederfinden. Die alten Bäume flüstern ihre Geschichten,
                         die Feuerstelle lädt zu stillen Momenten unter dem Sternenhimmel ein.
                     </p>
                     <p style="margin-bottom: 16px;">
-                        <strong style="color: var(--forest);">🔥 Die Feuerstelle</strong> – Hier kannst du zur Ruhe kommen,
-                        die Flammen beobachten und einfach sein. Ein Ort der Wärme und Geborgenheit.
+                        <strong style="color: var(--forest);" data-i18n="about.fireplace">🔥 Die Feuerstelle</strong> – <span data-i18n="about.fireplaceText">Hier kannst du zur Ruhe kommen,
+                        die Flammen beobachten und einfach sein. Ein Ort der Wärme und Geborgenheit.</span>
                     </p>
                     <p style="margin-bottom: 16px;">
-                        <strong style="color: var(--forest);">🌲 Der Wald</strong> – Direkt neben uns erstreckt sich die Natur
-                        in ihrer ganzen Kraft. Lass dich einladen zu Spaziergängen, die den Geist klären und das Herz öffnen.
+                        <strong style="color: var(--forest);" data-i18n="about.forest">🌲 Der Wald</strong> – <span data-i18n="about.forestText">Direkt neben uns erstreckt sich die Natur
+                        in ihrer ganzen Kraft. Lass dich einladen zu Spaziergängen, die den Geist klären und das Herz öffnen.</span>
                     </p>
                     <p style="margin-bottom: 0;">
-                        Dieser Platz ist mehr als ein Ort zum Übernachten – er ist eine Einladung,
-                        wieder mit dir selbst und der Natur in Verbindung zu treten. <em>Willkommen, Gast auf Erden.</em>
+                        <span data-i18n="about.outro">Dieser Platz ist mehr als ein Ort zum Übernachten – er ist eine Einladung,
+                        wieder mit dir selbst und der Natur in Verbindung zu treten.</span> <em data-i18n="about.welcome">Willkommen, Gast auf Erden.</em>
                     </p>
                 </div>
             </div>
