fix: Remove i18n attributes from dynamic header fields
Title and subtitle are now fully dynamic from database

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1566,8 +1566,8 @@
         </div>
         <div class="header-content">
             <img src="/logo-neu.png" alt="Logo" class="header-logo">
-            <h1 id="mainTitle" data-i18n="header.title">gastauferden.at</h1>
-            <p class="subtitle" data-i18n="header.subtitle">Ein magischer Ort zum Sein • Hollenthon</p>
+            <h1 id="mainTitle">gastauferden.at</h1>
+            <p class="subtitle">Ein magischer Ort zum Sein • Hollenthon</p>
         </div>
 
         <!-- Quick Navigation (nur für eingeloggte Gäste) -->
